# scraping

./: README.md
depauw_courses/: README.md  main.py  pyproject.toml  setup.cfg
github_jobs/: main.py
