[tool.poetry]
name = "depauw_courses"
version = "0.1.0"
description = "Scrapes course schedules offered by DePauw University."
authors = ["So Negishi <5055ngs@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
bs4 = "^0.0.1"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
